Created people endpoints.
Created PeopleController, PeopleService, DirectorDto, People enum, JpaAuditingConfig, PersonMapper, ActorMapper, DirectorMapper, GenreMapper. Added genreDtos for actorDtos and directorDtos. Changed MovieDto Actors, Genres and Directors fields to Dto classes of those. Changed old PersonDto class to SearchDto class.